--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 <body class="container">
     <style>
         body{
-            background-color: bisque;
+            background-color: #CCCCFF;
         }
         .container {
             width: 80%;
             margin: auto;
             margin-top: 3em;
+        }
+        .mybutton{
+            background-color: #f7786b;
+            font-size: 0.75em;
+        }
+        .card{
+            background-color: rgb(212, 161, 161);
         }
     </style>
     
